gcc/testsuite/rust/rustc/ui/suggestions/issue-109291.rs
fn main() {
    println!("Custom backtrace: {}", std::backtrace::Backtrace::forced_capture());
// { dg-error ".E0599." "" { target *-*-* } .-1 }
}

